css file created, image is on the folder, but I don't know css

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}" />
 {% if alltheposts %}
     <ul>
     {% for blogpost in alltheposts %}
