--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
 {% load static %}
+<html>
+<head>
+	<title>Main page</title>
+</head>
 
-<link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}" />
 {% if alltheposts %}
     <ul>
     {% for blogpost in alltheposts %}
