a form created to add posts. view created, url adjusted, template created. a couple of new posts added.

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -14,4 +14,8 @@
 {% else %}
     <p>No posts are available.</p>
 {% endif %}
+
+<a href="{% url 'create' %}">Create a post</a><br>
+
 <a href="{% url 'about' %}">To the 'about' page</a>
+
