--- a/blog/templates/blog/create.html
+++ b/blog/templates/blog/create.html
@@ -10,7 +10,7 @@
 		{% csrf_token %}
 		{% for field in form.visible_fields %}
 			{{ field.errors }}
-			{{ field.help_text }}
+			{{ field.help_text }}<br>
 			{{ field }}
 		{% endfor %}
 
