--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,11 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}" />
+	<title>About</title>
 
-	<title>About the blog</title>
+</head>
+<body>
+
 
 
 <h1>About the Blog</h1>
 <p>This is the first project that I completed on my own. I am proud and happy.</p>
-
+</body>
 <a href="{% url 'index' %}">To the main page</a>
+</html>
